--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-                
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,6 +58,11 @@
 			<scope>test</scope>
 		</dependency>
                 
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                </dependency>
+                
                 <!-- excluindo o tomcat e adicionando a dependencia do jetty -->
                 
                 <dependency>
@@ -72,6 +72,11 @@
                                 <exclusion>
                                         <groupId>org.springframework.boot</groupId>
                                         <artifactId>spring-boot-starter-tomcat</artifactId>
+                                </exclusion>
+                                
+                                <exclusion>
+                                        <groupId>org.springframework.boot</groupId>
+                                        <artifactId>spring-boot-starter-security</artifactId>
                                 </exclusion>
                         </exclusions>
                 </dependency>
